# pidgin-share-desktop

./: .anjuta_sym_db.db  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.ac.bak  configure.ac~  index.html
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.h  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile  client.lo  libpidgin-sharedesk.la  server.lo  sharedesk.lo  upnp-functions.lo
Debug/src/.deps/: client.Plo  server.Plo  sharedesk.Plo  upnp-functions.Plo
Debug/src/.libs/: libpidgin-sharedesk.la  libpidgin-sharedesk.lai  libpidgin-sharedesk.so.0  libpidgin-sharedesk.so.0.0.0
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/: Makefile.am  Makefile.am.bak  Makefile.am~  Makefile.in  bindings.h  client.c  client.c~  client.h  client.h~  debug-messages.c  sd_prefs.c  sd_prefs.h  server.c  server.c~  server.h  server.h~  sharedesk.c  sharedesk.c~  sharedesk.h  sharedesk.h~  upnp-functions.c  upnp-functions.c~  upnp-functions.h  upnp-functions.h~
